--- a/css/estilos.css
+++ b/css/estilos.css
@@ -144,8 +144,9 @@ h3 {
 }
 
 iframe {
-    width: 35vh;
-    height: 20vh;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 #contacto{ 
@@ -164,7 +165,6 @@ form{
     height: 40vh;
 }
 
-
 form input {
     width: 90%;
     margin: 15px;
@@ -173,6 +173,7 @@ form input {
 form label {
     width: 90%;
 }
+
 footer {
     background: #000000;
     height: 25vh;
