--- a/css/estilos.css
+++ b/css/estilos.css
@@ -145,29 +145,37 @@ h3 {
 
 iframe {
     width: 100%;
-    height: 100%;
+    height: 250px;
     border: 0;
 }
 
 #contacto{ 
     padding: 30px;   
+    -webkit-box-shadow: 4px 7px 20px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 4px 7px 20px -9px rgba(0,0,0,0.75);
+    box-shadow: 4px 7px 20px -9px rgba(0,0,0,0.75);
+    margin: 30px;
 }
 
 form{ 
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    -webkit-box-shadow: 4px 7px 20px -9px rgba(0,0,0,0.75);
-    -moz-box-shadow: 4px 7px 20px -9px rgba(0,0,0,0.75);
-    box-shadow: 4px 7px 20px -9px rgba(0,0,0,0.75);
-    padding: 10px;  
-    height: 40vh;
+    justify-content: space-between;
+    
+    padding: 25px;
+    height: 50vh;
 }
 
 form input {
     width: 90%;
-    margin: 15px;
+    border-radius: 10px;
+    border: .5px solid #19472a;
+    height: 1.8em;
+}
+
+#boton{
+    width: 30%;
 }
 
 form label {
@@ -176,13 +184,43 @@ form label {
 
 footer {
     background: #000000;
-    height: 25vh;
+    height: 40vh;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    padding: 25px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 30px;
 }
 
-footer p {
-    color: #ffffff;
+footer div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer div ul li {
+    color: #ffffff; 
+    font-size: 12px;
+    height: 30%;
+}
+
+footer div ul li a{
+    color: #ffffff; 
+    
+}
+footer p  {
+    color: #ffffff;   
+} 
+
+#facebook{
+    background:url("../img/icons8-facebook-old-48.png") no-repeat center center;
+}
+
+#twitter{
+    background:url("../img/icons8-twitter-48.png") no-repeat center center;
+}
+
+#instagram{
+    background:url("../img/icons8-instagram-48.png") no-repeat center center;
 }
