--- a/css/estilos.css
+++ b/css/estilos.css
@@ -151,9 +151,8 @@ iframe {
 
 #contacto{ 
     padding: 30px;   
-    -webkit-box-shadow: 4px 7px 20px -9px rgba(0,0,0,0.75);
-    -moz-box-shadow: 4px 7px 20px -9px rgba(0,0,0,0.75);
-    box-shadow: 4px 7px 20px -9px rgba(0,0,0,0.75);
+    border: .5px solid #19472a;
+    border-radius: 10px;
     margin: 30px;
 }
 
@@ -176,10 +175,14 @@ form input {
 
 #boton{
     width: 30%;
+    color: #822007;
+    background: #ffffff;
+    font-size: 18px;
 }
 
 form label {
     width: 90%;
+    color: #822007;
 }
 
 footer {
@@ -208,13 +211,17 @@ footer div ul li {
 footer div ul li a{
     color: #ffffff; 
     
-}
+}   
 footer p  {
     color: #ffffff;   
 } 
 
 #facebook{
     background:url("../img/icons8-facebook-old-48.png") no-repeat center center;
+    font-size: 0;   
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 #twitter{
