--- a/css/estilos.css
+++ b/css/estilos.css
@@ -197,37 +197,30 @@ footer {
 
 footer div {
     width: 100%;
+    height: 40%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+
+footer div ul {
+    height: 100%;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 footer div ul li {
     color: #ffffff; 
     font-size: 12px;
-    height: 30%;
 }
 
-footer div ul li a{
-    color: #ffffff; 
-    
-}   
+footer div ul li a figure{
+    height: 100%;
+}
+
 footer p  {
     color: #ffffff;   
 } 
 
-#facebook{
-    background:url("../img/icons8-facebook-old-48.png") no-repeat center center;
-    font-size: 0;   
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-#twitter{
-    background:url("../img/icons8-twitter-48.png") no-repeat center center;
-}
-
-#instagram{
-    background:url("../img/icons8-instagram-48.png") no-repeat center center;
-}
