--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,9 @@
     color: #19472a;
 }
 
+a {
+    text-decoration: none;
+}
 header {
     background: #000000;
     height: 8vh;
@@ -171,7 +174,6 @@ form input {
     width: 90%;
     border-radius: 10px;
     border: .5px solid #19472a;
-    height: 1.8em;
     padding: 8pX;
 }
 
@@ -211,8 +213,7 @@ footer div ul:nth-child(1) {
     list-style: none;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    
+    align-items: center;   
 }
 
 footer div ul:nth-child(2){
@@ -271,7 +272,6 @@ footer p  {
     header h1{
         width: 15%;
     }
-
     
     #botones {
         position: relative;
@@ -303,6 +303,7 @@ footer p  {
         left: 0;
     }
     #pastillas {
+        margin-top: 100px;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-gap: 1em;
         align-items: baseline;
@@ -334,10 +335,17 @@ footer p  {
         height: 500px;
     }
 
-    #contacto {
+    #contacto{
         margin:150px auto;
     }
 
+    #contancto form input{
+        font-size: 24px;
+    }
+
+    #boton {
+        width: 100px;
+    }
     footer div {
         flex-direction: row;
         justify-content: space-around;
@@ -355,5 +363,9 @@ footer p  {
 
     footer div ul li {
         font-size: 20px;
+    }
+
+    footer p{
+        font-size: 30px;
     }
 }
