--- a/css/estilos.css
+++ b/css/estilos.css
@@ -168,10 +168,11 @@ form{
 }
 
 form input {
-    width: 90%;
+    width: 60%;
     border-radius: 10px;
     border: .5px solid #19472a;
     padding: 8pX;
+    margin: 10px;
 }
 
 #boton{
