--- a/css/estilos.css
+++ b/css/estilos.css
@@ -96,6 +96,10 @@ nav:target #iconos li:last-child {
     display: block;
 }
 
+main div:nth-child(1){
+    font-size: 0px;
+}
+
 img{
     width: 100%;
 }
@@ -168,23 +172,24 @@ form{
 }
 
 form input {
-    width: 60%;
+    width: 80%;
     border-radius: 10px;
     border: .5px solid #19472a;
     padding: 8pX;
     margin: 10px;
 }
 
+form label {
+    width: 80%;
+    color: #822007;
+}
+
 #boton{
-    width: 30%;
+    width: 80%;
     color: #822007;
     background: #ffffff;
     font-size: 18px;
-}
-
-form label {
-    width: 90%;
-    color: #822007;
+    align-self: flex-end;
 }
 
 footer {
