--- a/css/estilos.css
+++ b/css/estilos.css
@@ -43,7 +43,7 @@ nav {
     list-style: none;
     text-indent: -100px;
     overflow: hidden;
-    margin-top: 1.5em;
+    margin-top: .8em;
 }
 
 #iconos li a {
@@ -76,6 +76,9 @@ nav {
     display: block;
     line-height: 2em;
 }
+#botones li{
+    visibility: hidden;
+}
 
 main {
     position: relative;
@@ -85,7 +88,11 @@ main {
 }
 
 nav:target~main {
-    transform: translateY(22vh);
+    transform: translateY(28vh);
+}
+
+nav:target #botones li{
+    visibility: visible;
 }
 
 nav:target #iconos li:first-child {
@@ -95,6 +102,7 @@ nav:target #iconos li:first-child {
 nav:target #iconos li:last-child {
     display: block;
 }
+
 #banner h2{
     display: none;
 }
@@ -299,6 +307,7 @@ footer p  {
     }
     #botones li {
         margin-right: 50px;
+        visibility: visible;
     }
     #botones li a{
         margin: 0 10px;
